# bluemagpie-tts-portal

./: .gitignore  LICENSE  README.md  index.html
inference/: pyproject.toml
inference/app/: audio.py  deps.py  fake_model_service.py  main.py  model_service.py
inference/scripts/: download_model.py  smoke_model.py
inference/tests/: test_api.py  test_audio.py  test_smoke.py
portal/: app.js  index.html  package-lock.json  package.json  playwright.config.js  script.html  slides.html  styles.css
portal/tests/: test_portal.spec.js
