[project]
name = "bluemagpie-tts-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "numpy>=1.26",
    "soundfile>=0.12",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Only `app` is an importable package; tests/scripts/deploy are not, so disable
# setuptools flat-layout auto-discovery (which errors on multiple top-level dirs).
[tool.setuptools]
packages = ["app"]
